--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keywords" content="MEJA CAFE PALU">
-  <meta name="description" content="Discover our cafe & restaurant menu with fresh coffee, delicious meals, online ordering, and table reservations in a cozy atmosphere.">
+  <meta name="description" content="READY STOCK & COSTUM - Melayani pemesanan furniture cafe, set meja kursi & pembuatan cafe/outlet">
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
