Organize assets2 by categories (meja, sofa, set) and update image paths

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <!-- Styles -->
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/WebP" href="assets/logo.WebP"/>
+  <link rel="icon" type="image/WebP" href="assets2/logo/logo.webp"/>
   <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
   <link rel="stylesheet" href="https://unpkg.com/lenis@1.3.11/dist/lenis.css">
   
@@ -77,7 +77,7 @@
             <div class="menu-grid">
                 <!-- Meja Items -->
                 <div class="menu-item animate-on-scroll" data-category="meja">
-                    <img src="assets2/4 meja 1 kursi.jpeg" alt="Set 4 Meja 1 Kursi" class="menu-item-img">
+                    <img src="assets2/meja/4 meja 1 kursi.jpeg" alt="Set 4 Meja 1 Kursi" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Set 4 Meja 1 Kursi</h3>
                         <p>Set lengkap 4 meja dan 1 kursi, cocok untuk cafe minimalis modern. Material berkualitas tinggi dengan finishing rapi.</p>
@@ -88,7 +88,7 @@
                     </div>
                 </div>
                 <div class="menu-item animate-on-scroll" data-category="meja">
-                    <img src="assets2/Meja komputer gaming.jpeg" alt="Meja Komputer Gaming" class="menu-item-img">
+                    <img src="assets2/meja/Meja komputer gaming.jpeg" alt="Meja Komputer Gaming" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Meja Komputer Gaming</h3>
                         <p>Meja komputer gaming ergonomis dengan desain modern. Cocok untuk cafe gaming atau workspace area dengan space management optimal.</p>
@@ -99,7 +99,7 @@
                     </div>
                 </div>
                 <div class="menu-item animate-on-scroll" data-category="meja">
-                    <img src="assets2/Meja konsol.jpeg" alt="Meja Konsol" class="menu-item-img">
+                    <img src="assets2/meja/Meja konsol.jpeg" alt="Meja Konsol" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Meja Konsol</h3>
                         <p>Meja konsol elegant untuk area resepsionis atau display cafe. Design simpel dengan material premium untuk kesan profesional.</p>
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div class="menu-item animate-on-scroll" data-category="meja">
-                    <img src="assets2/Meja taman.jpeg" alt="Meja Taman" class="menu-item-img">
+                    <img src="assets2/meja/Meja taman.jpeg" alt="Meja Taman" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Meja Taman</h3>
                         <p>Meja outdoor untuk area taman atau teras cafe. Tahan cuaca dengan material yang awet dan design menarik untuk outdoor seating.</p>
@@ -121,7 +121,7 @@
                     </div>
                 </div>
                 <div class="menu-item animate-on-scroll" data-category="set">
-                    <img src="assets2/Coffe table set.jpeg" alt="Coffee Table Set" class="menu-item-img">
+                    <img src="assets2/set/Coffe table set.jpeg" alt="Coffee Table Set" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Coffee Table Set</h3>
                         <p>Set coffee table lengkap untuk area lounge cafe. Design modern minimalis dengan material berkualitas tinggi.</p>
@@ -134,7 +134,7 @@
                 
                 <!-- Sofa Items -->
                 <div class="menu-item animate-on-scroll" data-category="sofa">
-                    <img src="assets2/Sofa Esty.jpeg" alt="Sofa Esty" class="menu-item-img">
+                    <img src="assets2/sofa/Sofa Esty.jpeg" alt="Sofa Esty" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Sofa Esty</h3>
                         <p>Sofa nyaman dengan design elegant untuk area VIP cafe. Busa premium dengan finishing berkualitas tinggi.</p>
@@ -145,7 +145,7 @@
                     </div>
                 </div>
                 <div class="menu-item animate-on-scroll" data-category="sofa">
-                    <img src="assets2/Sofa gucchi 2 seater.jpeg" alt="Sofa Gucchi 2 Seater" class="menu-item-img">
+                    <img src="assets2/sofa/Sofa gucchi 2 seater.jpeg" alt="Sofa Gucchi 2 Seater" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Sofa Gucchi 2 Seater</h3>
                         <p>Sofa 2 seater luxury dengan design modern. Ideal untuk couple seating atau area intimate di cafe Anda.</p>
@@ -158,7 +158,7 @@
                 
                 <!-- Set Furniture Items -->
                 <div class="menu-item animate-on-scroll" data-category="set">
-                    <img src="assets2/Set couple ropan busa.jpeg" alt="Set Couple Ropan Busa" class="menu-item-img">
+                    <img src="assets2/set/Set couple ropan busa.jpeg" alt="Set Couple Ropan Busa" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Set Couple Ropan Busa</h3>
                         <p>Set couple dengan rangka rotan dan busa empuk. Perfect untuk area outdoor atau semi-outdoor cafe dengan konsep natural.</p>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
                 <div class="menu-item animate-on-scroll" data-category="set">
-                    <img src="assets2/set elinda.jpeg" alt="Set Elinda" class="menu-item-img">
+                    <img src="assets2/set/set elinda.jpeg" alt="Set Elinda" class="menu-item-img">
                     <div class="menu-item-content">
                         <h3>Set Elinda</h3>
                         <p>Set furniture lengkap dengan design minimalis modern. Cocok untuk cafe dengan konsep clean dan elegant.</p>
