Set default price to Rp 100.000 for all products and remove console statements for production

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <h3>Set 4 Meja 1 Kursi</h3>
                         <p>Set lengkap 4 meja dan 1 kursi, cocok untuk cafe minimalis modern. Material berkualitas tinggi dengan finishing rapi.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -93,7 +93,7 @@
                         <h3>Meja Komputer Gaming</h3>
                         <p>Meja komputer gaming ergonomis dengan desain modern. Cocok untuk cafe gaming atau workspace area dengan space management optimal.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <h3>Meja Konsol</h3>
                         <p>Meja konsol elegant untuk area resepsionis atau display cafe. Design simpel dengan material premium untuk kesan profesional.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -115,7 +115,7 @@
                         <h3>Meja Taman</h3>
                         <p>Meja outdoor untuk area taman atau teras cafe. Tahan cuaca dengan material yang awet dan design menarik untuk outdoor seating.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
                         <h3>Coffee Table Set</h3>
                         <p>Set coffee table lengkap untuk area lounge cafe. Design modern minimalis dengan material berkualitas tinggi.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -139,7 +139,7 @@
                         <h3>Sofa Esty</h3>
                         <p>Sofa nyaman dengan design elegant untuk area VIP cafe. Busa premium dengan finishing berkualitas tinggi.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         <h3>Sofa Gucchi 2 Seater</h3>
                         <p>Sofa 2 seater luxury dengan design modern. Ideal untuk couple seating atau area intimate di cafe Anda.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -163,7 +163,7 @@
                         <h3>Set Couple Ropan Busa</h3>
                         <p>Set couple dengan rangka rotan dan busa empuk. Perfect untuk area outdoor atau semi-outdoor cafe dengan konsep natural.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
@@ -174,7 +174,7 @@
                         <h3>Set Elinda</h3>
                         <p>Set furniture lengkap dengan design minimalis modern. Cocok untuk cafe dengan konsep clean dan elegant.</p>
                         <div class="menu-item-footer">
-                            <span class="price">Hubungi Kami</span>
+                            <input type="number" class="price-input" placeholder="Harga (Rp)" value="100000">
                             <button class="add-to-cart-btn">+</button>
                         </div>
                     </div>
