--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <h3>Lokasi Kami</h3>
           <div class="footer-map">
             <iframe 
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.407!2d119.8552128!3d-0.9432431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d8bed3f21980c17%3A0xc7d9ee22ee9b5781!2sMeja%20Cafe!5e0!3m2!1sen!2sid!4v1731795370000!5m2!1sen!2sid" 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3987.407!2d119.8552128!3d-0.9432431!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d8bed3f21980c17%3A0xc7d9ee22ee9b5781!2sMeja%20Cafe,+Jl.+Manunggal,+Baliase,+Kec.+Marawola,+Kabupaten+Sigi,+Sulawesi+Tengah+94222!5e0!3m2!1sen!2sid!4v1731795370000!5m2!1sen!2sid&q=Meja+Cafe&entry=gps" 
               width="100%" 
               height="200" 
               style="border:0; border-radius: 8px;" 
